--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   file_picker: ^4.0.0
   charset_converter: ^2.2.0
+  go_router: ^14.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
