--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   file_picker: ^4.0.0
   charset_converter: ^2.2.0
   go_router: ^14.1.4
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.4.10
 
 
   # The following adds the Cupertino Icons font to your application.
