--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^14.1.4
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.4.10
+  fluttertoast: ^8.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
