--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.4.10
   fluttertoast: ^8.0.8
+  http: ^1.2.1  # ここに最新バージョンを指定します
 
 
   # The following adds the Cupertino Icons font to your application.
