--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,14 @@ dependencies:
   fluttertoast: ^8.0.8
   http: ^1.2.1  # ここに最新バージョンを指定します
   mime: ^1.0.0
-
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   csv: ^6.0.0
+  window_manager: ^0.4.0
+  
 
 dev_dependencies:
   flutter_test:
